2008/05/19
	9. Remove obsolete doxygen directives.
	
2008/04/18

	8. In src/package.cpp, debug message are filtered out by compilation option -DDEBUG=1 or 2.
	7. Added output to explain how to use the package
	
2008/04/16
	6. Added commands in configure.ac to set CXXFLAGS and CFLAGS env variables to -Wall if not already defined.
2008/03/04
	5. Modification of the style file in order better highlight detailled descriptions.
	
2007/12/21
	4. Correction in compilation of dist rule.
	
2007/11/15
	3. Added autogen.sh file.
	
2007/04/20
	packageCreate: 
	1. Modified Makefile.am in order to compile doc only at installation
	2. Added generation of package.doxytag in order to make doxygen find documentation of dependencies.
	