@@ -2,7 +2,7 @@
  <hr>
  <center>
  <img src="./pictures/footer.jpg" Height=100>
- <br>foo library documentation</br>
+ <br>&PACKAGE_NAME& library documentation</br>
  </center>
  <hr>
  </center>
