@@ -1,6 +1,6 @@
 <HTML>
     <HEAD>
-      <TITLE>foo library documentation</TITLE>
+      <TITLE>&PACKAGE_NAME& library documentation</TITLE>
       <LINK HREF="package.css" REL="stylesheet" TYPE="text/css">
     </HEAD>
     <BODY>
